change delete method with charity